[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-restful>=0.3.10",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "jsonschema>=4.23.0",
    "flask-migrate>=4.1.0",
    "sqlalchemy>=2.0.38",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "pytest>=8.3.4",
    "pytest-env>=1.1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
env = [
    "DATABASE_URL=sqlite:///test.db"
]